--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
         <button type="submit">ファイルをアップロード</button>
     </form>
 
-    <a href="templates/filelist.html?mode=gray">グレースケール</a>
+    <a href="/gray_list">グレースケール</a>
+    <a href="/canny_list">canny</a>
 </body>
 </html>
