--- a/templates/filelist.html
+++ b/templates/filelist.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="{{ url_for('static', filename='filelist.js') }}"></script>
+    <script defer>
+        const files_length = "{{ files|length }}";
+        const files = "{{ files|safe }}";
+    </script>
     <title>ImageList</title>
 </head>
 <body>
