--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
         <button type="submit">ファイルをアップロード</button>
     </form>
 
+    <a href="/upload_list">アップロードした画像</a>
     <a href="/gray_list">グレースケール</a>
     <a href="/canny_list">canny</a>
 </body>
