Update filelist.js, filelist.html etc.
Update filelist.js, filelist.html
Update index.html, web.py
Delete Baboon.jpg

--- a/templates/filelist.html
+++ b/templates/filelist.html
@@ -5,24 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="{{ url_for('static', filename='filelist.js') }}"></script>
     <script defer>
+        // pythonから受け取ったファイルの一覧
         const files = {{ files|tojson }};
-        const files_length = {{ files|length }};
-
-        // 画像を追加する<div>
-        const div_img_list = document.getElementById("img_list");
-
-        for (let i=0; i<files_length; i++) {
-            let img = document.createElement("img");
-            img.src = files[i];
-            img.alt = files[i];
-
-            div_img_list.appendChild(img);
-        }
-
-        
-
     </script>
-    <title>ImageList</title>
+    <title>{{ title }}</title>
 </head>
 <body>
     <div id="img_list"></div>
