--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,10 @@
         <button type="submit">ファイルをアップロード</button>
     </form>
 
-    <a href="/upload_list">アップロードした画像</a>
-    <a href="/gray_list">グレースケール</a>
+    <a href="/upload_list">upload</a>
+    <a href="/gray_list">gray</a>
     <a href="/canny_list">canny</a>
+    <a href="/frame_list">frame</a>
+    <a href="/mosaic_list">mosaic</a>
 </body>
 </html>
