--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>WebImageProcessor</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark mt-3 mb-3">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="/upload1"></a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/upload">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/upload_list">upload</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/gray_list">gray</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/canny_list">canny</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/frame_list">frame</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/mosaic_list">mosaic</a>ç
+                </li>
+            </ul>
+        </div>
+    </nav> 
+
     <form action="upload" method="POST" enctype="multipart/form-data">
         <input type="file" required accept="image/*" name="file">
-        <button type="submit">ファイルをアップロード</button>
+        <button type="submit" class="btn btn-primary btn-lg">ファイルをアップロード</button>
     </form>
-
-    <a href="/upload_list">upload</a>
-    <a href="/gray_list">gray</a>
-    <a href="/canny_list">canny</a>
-    <a href="/frame_list">frame</a>
-    <a href="/mosaic_list">mosaic</a>
+    <h1>{{ result }}</h1>
 </body>
 </html>
